--- a/app/src/main/res/layout/item_row.xml
+++ b/app/src/main/res/layout/item_row.xml
@@ -10,7 +10,7 @@
 
     <androidx.cardview.widget.CardView
         android:id="@+id/idCardView"
-        android:layout_marginTop="10dp"
+        android:layout_marginTop="5dp"
         android:layout_marginHorizontal="5dp"
         android:layout_width="match_parent"
         android:layout_height="75dp"
@@ -20,6 +20,8 @@
             android:id="@+id/task_title"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:textSize="30dp"
+            android:gravity="fill_vertical"
             android:text="Hello World! This is the initial card view!!" />
 
     </androidx.cardview.widget.CardView>
