--- a/app/src/main/res/layout/item_row.xml
+++ b/app/src/main/res/layout/item_row.xml
@@ -21,7 +21,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:textSize="30dp"
-            android:gravity="fill_vertical"
+            android:gravity="center_vertical"
             android:text="Hello World! This is the initial card view!!" />
 
     </androidx.cardview.widget.CardView>
