--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,4 +1,4 @@
-<resources>
+<resources xmlns:tools="http://schemas.android.com/tools">
 
     <!-- Base application theme. -->
     <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
@@ -11,7 +11,8 @@
     </style>
 
     <style name="HeaderBar">
-        <item name="android:background">@color/colorAccent</item>
+        <item name="android:background">@color/colorPrimaryDark</item>
     </style>
+
 
 </resources>
