--- a/app/src/main/res/layout/expanding_item.xml
+++ b/app/src/main/res/layout/expanding_item.xml
@@ -11,7 +11,7 @@
         android:layout_height="wrap_content"
         android:layout_centerVertical="true"
         android:gravity="center_vertical|left"
-        android:textColor="@color/white"
+        android:textColor="@color/black"
         android:textSize="22sp"/>
 
     <ImageView
@@ -24,8 +24,7 @@
         android:layout_marginEnd="16dp"
         android:layout_marginRight="16dp"
         android:padding="12dp"
-
-        android:src="@drawable/add"/>
+        android:src="@drawable/add_black"/>
 
     <ImageView
         android:id="@+id/remove_item"
@@ -37,6 +36,6 @@
         android:layout_toStartOf="@id/add_more_sub_items"
         android:layout_toLeftOf="@id/add_more_sub_items"
         android:padding="12dp"
-        android:src="@drawable/clear"/>
+        android:src="@drawable/clear_black"/>
 
 </RelativeLayout>
