--- a/app/src/main/res/layout/expanding_sub_item.xml
+++ b/app/src/main/res/layout/expanding_sub_item.xml
@@ -21,9 +21,9 @@
         android:layout_alignParentEnd="true"
         android:layout_alignParentRight="true"
         android:layout_centerVertical="true"
-        android:layout_marginEnd="8dp"
-        android:layout_marginRight="8dp"
+        android:layout_marginEnd="10dp"
+        android:layout_marginRight="10dp"
         android:padding="16dp"
-        app:srcCompat="@drawable/clear_black"/>
+        app:srcCompat="@drawable/checkbox_black"/>
 
 </RelativeLayout>
