--- a/app/src/main/res/layout/expanding_item.xml
+++ b/app/src/main/res/layout/expanding_item.xml
@@ -14,6 +14,19 @@
         android:textColor="@color/black"
         android:textSize="22sp"/>
 
+    <!--<EditText-->
+        <!--android:id="@+id/editText"-->
+        <!--android:layout_width="wrap_content"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:layout_centerVertical="true"-->
+        <!--android:gravity="center_vertical|left"-->
+        <!--android:clickable="true"-->
+        <!--android:inputType="text"-->
+        <!--android:textSize="22dp"-->
+        <!--android:maxLines="1"-->
+        <!--android:visibility="gone"-->
+        <!--android:text="Sample" />-->
+
     <ImageView
         android:id="@+id/add_more_sub_items"
         android:layout_width="48dp"
