--- a/app/src/main/res/layout/expanding_item.xml
+++ b/app/src/main/res/layout/expanding_item.xml
@@ -14,6 +14,16 @@
         android:textColor="@color/black"
         android:textSize="22sp"/>
 
+    <TextView
+        android:id="@+id/hiddenDbId"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerVertical="true"
+        android:layout_toRightOf="@id/title"
+        android:gravity="center_vertical|left"
+        android:textColor="@color/black"
+        android:textSize="22sp"/>
+
     <!--<EditText-->
         <!--android:id="@+id/editText"-->
         <!--android:layout_width="wrap_content"-->
