--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,5 +4,5 @@
     <color name="colorPrimaryDark">#F2F3F4</color>
     <color name="colorAccent">#D81B60</color>
     <color name="black">#000000</color>
-    <color name="color1">#82B926</color>
+    <color name="disabled">#a3a3a3</color>
 </resources>
