--- a/app/src/main/res/layout/expanding_item.xml
+++ b/app/src/main/res/layout/expanding_item.xml
@@ -21,6 +21,7 @@
         android:layout_centerVertical="true"
         android:layout_toRightOf="@id/title"
         android:gravity="center_vertical|left"
+        android:visibility="gone"
         android:textColor="@color/black"
         android:textSize="22sp"/>
 
