--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -25,9 +25,9 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="To Do List"
+            android:text="@string/app_name"
             android:textAllCaps="true"
-            android:textSize="20dp"
+            android:textSize="20sp"
             android:textColor="@color/black"
             android:fontFamily="sans-serif-light"
             android:layout_gravity="center"
@@ -48,7 +48,7 @@
         <com.diegodobelo.expandingview.ExpandingList
             android:id="@+id/expanding_list_main"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:clickable="true"
             android:focusableInTouchMode="true"
             android:focusable="true"
